first simple version.
fixing issues with the help of @vinodseb

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "url": "https://github.com/joergi/learning-typescript"
   },
   "author": "github.com/joergi",
-  "main": "app/src/index.js",
+  "main": "src/main/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "start": "ts-node ./src/main/index.ts"
   },
   "dependencies": {
     "express": "^4.17.1",
