--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
     "module": "commonjs",
-    "target": "es6",
-    "sourceMap": true
+    "outDir": "app/src/",
+    "sourceMap": true,
+    "target": "es6"
   },
+
   "include": [
     "src/**/*"
   ],
