--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.5",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.13",
-    "nodemon": "^2.0.4"
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   }
 }
